--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "LyuPo7_page-loader"
-version = "0.1.0"
+version = "1.0.0"
 description = "Page loader"
 authors = ["LyuPo <lport@frtk.ru>"]
 classifiers = [
@@ -9,13 +9,20 @@ classifiers = [
 ]
 repository = "https://github.com/LyuPo7/python-project-lvl3"
 packages = [
-  { include = "page-loader" },
+  { include = "page_loader" },
 ]
 
 [tool.poetry.dependencies]
 python = "^3.6"
+requests = "^2.24.0"
+pytest = "^6.1.1"
+pytest-cov = "^2.10.1"
+flake8 = "^3.8.4"
 
 [tool.poetry.dev-dependencies]
+
+[tool.poetry.scripts]
+page-loader = "page_loader.scripts.page_loader:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
