--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python = "^3.6"
 requests = "^2.24.0"
 bs4 = "^0.0.1"
 lxml = "^4.6.1"
+progress = "^1.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.1"
