--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "LyuPo7_page-loader"
-version = "5.0.0"
+version = "6.0.0"
 description = "Page loader"
 authors = ["LyuPo <lport@frtk.ru>"]
 classifiers = [
@@ -18,6 +18,7 @@ requests = "^2.24.0"
 bs4 = "^0.0.1"
 lxml = "^4.6.1"
 progress = "^1.5"
+requests_mock = "^1.9.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.1"
